<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ivan.control.Vacados">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaparto"
        android:id="@+id/textView7"
        android:layout_below="@+id/dias"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/date" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/diagnostic"
        android:spinnerMode="dialog"
        android:layout_below="@+id/nombreanimal"
        android:layout_alignRight="@+id/fin"
        android:layout_alignEnd="@+id/fin" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/estadoprod"
        android:spinnerMode="dialog"
        android:layout_below="@+id/secado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalizar"
        android:id="@+id/fin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/observaciones"
        android:hint="@string/obs"
        android:layout_above="@+id/fin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nombreanimal"
        android:hint="Nombre del Animal"
        android:layout_below="@+id/numanimal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/numanimal"
        android:layout_alignEnd="@+id/numanimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numanimal"
        android:hint="Número de Animal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dias"
        android:layout_alignEnd="@+id/dias" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/numeros"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignBottom="@+id/date" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:id="@+id/date"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/textView7"
        android:layout_toLeftOf="@+id/fin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/dias"
        android:hint="30 - 285"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dias_de_gestaci_n"
        android:id="@+id/textView6"
        android:layout_below="@+id/nombreanimal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secado"
        android:spinnerMode="dialog"
        android:layout_below="@+id/numeros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condicion_corporal"
        android:id="@+id/textView"
        android:layout_below="@+id/dias"
        android:layout_alignRight="@+id/dias"
        android:layout_alignEnd="@+id/dias" />

</RelativeLayout>
